--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Duvidas:
 - Devemos fazer o codigo em html e depois vue ou começar logo com vue
 
 -->
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>RadicalEvents</title>
