--- a/atividades.html
+++ b/atividades.html
@@ -9,6 +9,52 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"> <!--CDN de icons bootsrap-->
 </head>
 <body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-main">
+    <div class="container-fluid">
+      <a class="navbar-brand" href=""><img src="/imgs/radical_logo_nb.png" style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sobre-nos">Sobre Nós</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#atividades">Atividades</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#equipa">Equipa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reservas">Reservas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contactos">Contactos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#login">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="fotoinicial">
+    <div class="container-fluid">
+      <div class="row">
+
+        <p> PT | EN </p> 
+        <h1 id = "titulo">Cannoying</h1>
+        
+      </div>
+    </div>
+  </section>
+
   <p id="categoria"></p>
   <p id="titulo"></p>
   <img src="" id="imagem">
