--- a/atividades.html
+++ b/atividades.html
@@ -44,6 +44,8 @@
     </div>
   </nav>
 
+<!----Foto Inicial e Titulo-------->
+
   <section class="fotoinicial">
     <div class="container-fluid">
       <div class="row">
@@ -54,6 +56,41 @@
       </div>
     </div>
   </section>
+
+
+  <!----Descricao-------->
+
+  <div class="container p-5" id="descricao-titulo">
+    <div class="inicio p-5">
+      <h2 class="titulo-inicial">Canyoning no Douro</h2>
+      <p class="texto-abaixo">Região: Parque Nacional Peneda-Gerês <br> Dificuldade: Difícil</p>
+      <img src="/imgs/canyoning_geres_arado_sup_4.jpg" class="imagem-des">
+  </div>
+
+  <div class="container-fluid p-5">
+    <p class="sobre-desc">
+            Descrição: <br>
+            Este percurso apresenta uma extensão de cerca de 1000 metros percorridos com recurso a 4 rapeis que variam
+            entre os 6 e 40 metros de altura, caminhada pelo leito do rio, progressão aquática e pequenos saltos para a
+            água. Localizado em pleno Parque Nacional Peneda Gerês, a uma hora e meia de automóvel do Porto, apresenta
+            um fantástico enquadramento natural e paisagístico e grandes lagoas verdes de água límpida. Recomendamos
+            experiência anterior em canyoning ou rapel.
+    </p>
+    <p class="programa-desc">
+            Programa: <br>
+            8:00 - Pick up no local de alojamento (no caso de requerer transporte);<br>            
+            9:30 - Chegada / Ponto de encontro;<br>
+            9:40 - Briefing e entrega do equipamento;<br>
+            10:10 - Início da atividade;<br>
+            12:30 - Pequena paragem para reforço energético;<br>
+            16:00 - Final da descida;<br>
+            16:30 - Snack (opcional);<br>
+            18:10 - Drop off no local de alojamento (no caso de requerer transporte).<br>
+    </p>
+  </div>
+
+
+
 
   <p id="categoria"></p>
   <p id="titulo"></p>
