--- a/atividades.html
+++ b/atividades.html
@@ -68,16 +68,17 @@
   </div>
 
   <div class="container-fluid p-5">
+    <h6 class="titulodesc">Descrição:</h6> 
     <p class="sobre-desc">
-            Descrição: <br>
             Este percurso apresenta uma extensão de cerca de 1000 metros percorridos com recurso a 4 rapeis que variam
             entre os 6 e 40 metros de altura, caminhada pelo leito do rio, progressão aquática e pequenos saltos para a
             água. Localizado em pleno Parque Nacional Peneda Gerês, a uma hora e meia de automóvel do Porto, apresenta
             um fantástico enquadramento natural e paisagístico e grandes lagoas verdes de água límpida. Recomendamos
             experiência anterior em canyoning ou rapel.
     </p>
+    
+    <h6 class="titulodesc">Programa:</h6>
     <p class="programa-desc">
-            Programa: <br>
             8:00 - Pick up no local de alojamento (no caso de requerer transporte);<br>            
             9:30 - Chegada / Ponto de encontro;<br>
             9:40 - Briefing e entrega do equipamento;<br>
@@ -87,9 +88,45 @@
             16:30 - Snack (opcional);<br>
             18:10 - Drop off no local de alojamento (no caso de requerer transporte).<br>
     </p>
+
+    <h6 class="titulodesc">Este programa inclui:</h6>
+    <p class="programa-inc">
+      Transporte (quando solicitado) a partir do Grande Porto, Braga e Gerês, enquadramento técnico e acompanhamento permanente de monitores altamente qualificados, seguros em conformidade com a lei 
+      (disponível para consulta), botas de canyoning (Adidas Hydro Lace), fato isotérmico de alta performance, meias
+de neoprene, capacete de segurança, arnês com proteção, longe dupla, descensor, luvas de neoprene (quando
+necessário), sacos de transporte, bidons estanque, colete salva-vidas (quando necessário) e oferta de fotos e
+vídeos da actividade.
+
+    </p>
+
+    <h6 class="titulodesc">Trazer:</h6>
+    <p class="programa-tra">
+      - Calção/fato de banho<br>
+      - Toalha<br>
+      - Snack (ou requerer por 5€ extra)<br>
+      - Água<br>
+
+    </p>
+
+    <h6 class="titulodesc">Preço por pessoa com transporte incluido:</h6>
+    <p class="programa-preço">
+      2 a 5 participantes - 75€ <br>
+      mais de 5 participantes - 65€<br>
+      Preço por pessoa com transporte próprio:<br>
+      2 a 3 participantes - 75€ <br>
+      4 a 5 participantes - 60€<br>
+      mais de 5 participantes - 50€<br>
+    
+    </p>
+
+    <h6 class="titulodesc">Extra:</h6>
+    <p class="programa-snack">
+      Snack - 5€
+    </p>
+
+    <button class="btn btn-success px-3">Marque já</button>
+
   </div>
-
-
 
 
   <p id="categoria"></p>
