--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Duvidas:
                         <a class="nav-link" href="#reservas">Reservas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contactos">Contactos</a>
+                        <a class="nav-link" href="contacto.html">Contactos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://localhost:8080">Login</a>
@@ -329,10 +329,43 @@ Duvidas:
                 </div>
         </div>
     </div>
-    <footer>
+    <footer class="footer-info">
         <div class="container-fluid p-5">
-            <p>footer</p>
+            <div class="row links">
+                <div class="col-md-2">Linkdin</div>
+                <div class="col-md-2">Facebook</div>
+                <div class="col-md-2">Instagram</div>
+                <div class="col-md-2">Google Maps</div>
+                <div class="col-md-2">YouTube</div>
+                <div class="col-md-2">Twitter</div>
+            </div>
+            <div class="noticias">
+                <div class="seperator"></div>
+                <p>Receba noticias, atualizações e pacotes turísticos por email.</p>
+            </div>
+            <div class="row contactos">
+                <div class="col-md-4">
+                    <h4>Morada</h4>
+                    <p>SEDE: Rua do Ribeiro, nº 182, Casa 2,</p>
+                    <p>5100-361 Britiande - Lamego</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Contactos</h4>
+                    <p>SEDE: Rua do Ribeiro, nº 182, Casa 2,</p>
+                    <p>5100-361 Britiande - Lamego</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Informações</h4>
+                    <p>SEDE: Rua do Ribeiro, nº 182, Casa 2,</p>
+                    <p>5100-361 Britiande - Lamego</p>
+                </div>             
+            </div>
         </div>
+    </footer>
+    <footer class="footer-radical">
+        <img src="/imgs/radical_logo_nb.png" class="logo-footer">
+        <p>Direitos Reservados 2020 - Radical Events </p>
+        <p>Desporto, Aventura e Turismo, Lda.</p>
     </footer>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
