Adicionei Icons redes

--- a/contacto.html
+++ b/contacto.html
@@ -53,41 +53,49 @@
   <div class="mapa">
     <a class="mapa" href=""><img src="imgs/mapa.png" style="width: 45%; margin-left: 5%; margin-top: 90px"></a>
   </div>
-  <div class="nome">
-    <form>
+
+  <form>
+    <div class="nome">
       <label for="name">Nome*</label><br>
       <input type="text" id="name" name="name"><br>
-    </form>
-  </div>
-  <div class="sobrenome">
-    <form>
+    </div>
+    <div class="sobrenome">
       <label for="lname">Sobrenome*</label><br>
       <input type="text" id="lname" name="lname"><br>
-    </form>
-  </div>
-  <div class="email">
-    <form>
+    </div>
+    <div class="email">
       <label for="email">Email*</label><br>
       <input type="text" id="email" name="email"><br>
-    </form>
-  </div>
-  <div class="assunto">
-    <form>
+    </div>
+    <div class="assunto">
       <label for="assunto">Assunto*</label><br>
       <input type="text" id="assunto" name="assunto"><br>
-    </form>
-  </div>
-  <div class="mensagem">
-    <form>
+    </div>
+    <div class="mensagem">
       <label for="mensagem">Mensagem*</label><br>
       <input type="text" id="mensagem" name="mensagem"><br>
-    </form>
-  </div>
-  <div class="botao">
-    <form>
+    </div>
+    <div class="botao">
       <input type="button" value="Enviar" id="enviar">
-    </form>
+    </div>
+  </form>
+
+  <div class="iconYT">
+    <a class="iconYT" href=""><img src="imgs/icons8-youtube-30.png"></a>
   </div>
+  <div class="iconFB">
+    <a class="iconFB" href=""><img src="imgs/icons8-facebook-30.png"></a>
+  </div>
+  <div class="iconTT">
+    <a class="iconTT" href=""><img src="imgs/icons8-twitter-30.png"></a>
+  </div>
+  <div class="iconLID">
+    <a class="iconLID" href=""><img src="imgs/icons8-linkedin-30.png"></a>
+  </div>
+  <div class="iconINST">
+    <a class="iconINST" href=""><img src="imgs/icons8-instagram-circle-30.png"></a>
+  </div>
+
 
   <script>
     let listaContactos = localStorage.getItem("listaContactos");
