--- a/atividades.html
+++ b/atividades.html
@@ -61,7 +61,7 @@
   <!----Descricao-------->
 
   <div class="container p-5" id="descricao-titulo">
-    <div class="inicio p-5">
+    <div class="inicio">
       <h2 class="titulo-inicial" id="nome">Canyoning no Douro</h2>
       <p class="texto-abaixo">Região: <span id="regiao">Parque Nacional Peneda-Gerês</span><br> Dificuldade: <span id="dificuldade">Difícil</span></p>
       <img src="" class="imagem-des" id="imagem">
@@ -122,3 +122,4 @@ vídeos da actividade.
   </div>
   <script src="getAtividade.js"></script>
 </body>
+</html>
