Atividades e lista de atividades
Coloquei as informações das atividades em json mas ainda não esta acabado

--- a/atividades.html
+++ b/atividades.html
@@ -103,12 +103,11 @@ vídeos da actividade.
 
     <h6 class="titulodesc">Preço por pessoa com transporte incluido:</h6>
     <p class="programa-preço" id="preco">
-      2 a 5 participantes - 75€ <br>
-      mais de 5 participantes - 65€<br>
+      Preço por pessoa - 40€ <br>
+      mais de 5 participantes - 140€<br>
       Preço por pessoa com transporte próprio:<br>
-      2 a 3 participantes - 75€ <br>
-      4 a 5 participantes - 60€<br>
-      mais de 5 participantes - 50€<br>
+      Preço por pessoa - 30€ <br>
+      mais de 5 participantes - 120€<br>
     
     </p>
 
