--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ Duvidas:
     <title>RadicalEvents</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     <!--CDN do bootsrap-->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <!--CDN de icons bootsrap-->
-    <script src="/localStorage/localStorage.js"></script>
+    <script src="../localStorage/localStorage.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-main">
         <div class="container-fluid">
-            <a class="navbar-brand" href=""><img src="/imgs/radical_logo_nb.png"
+            <a class="navbar-brand" href=""><img src="../imgs/radical_logo_nb.png"
                     style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
