--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Duvidas:
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <!--CDN de icons bootsrap-->
-    <script src="../localStorage/localStorage.js"></script>
+    <script src="/localStorage/localStorage.js"></script>
 </head>
 
 <body>
