--- a/atividades.html
+++ b/atividades.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <title>RadicalEvents</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"> <!--CDN do bootsrap-->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"> <!--CDN de icons bootsrap-->
 </head>
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-main">
     <div class="container-fluid">
-      <a class="navbar-brand" href=""><img src="/imgs/radical_logo_nb.png" style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
+      <a class="navbar-brand" href=""><img src="imgs/radical_logo_nb.png" style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
