--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ Duvidas:
     <title>RadicalEvents</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     <!--CDN do bootsrap-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <!--CDN de icons bootsrap-->
-    <script src="/localStorage/localStorage.js"></script>
+    <script src="localStorage/localStorage.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-main">
         <div class="container-fluid">
-            <a class="navbar-brand" href=""><img src="../imgs/radical_logo_nb.png"
+            <a class="navbar-brand" href=""><img src="imgs/radical_logo_nb.png"
                     style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -163,22 +163,22 @@ Duvidas:
                     <ul class="gallery-list gallery-with-icon">
                         <li>
                             <a href="atividades.html" class="thumbnail">
-                                <img src="/imgs/inicio1.png" height="160" width="510" alt="">
+                                <img src="imgs/inicio1.png" height="160" width="510" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="animacao-espacos-urbanos.html" class="thumbnail">
-                                <img src="/imgs/inicio2.png" height="160" width="510" alt="">
+                                <img src="imgs/inicio2.png" height="160" width="510" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="team-building.html" class="thumbnail">
-                                <img src="/imgs/inicio3.png" height="160" width="510" alt="">
+                                <img src="imgs/inicio3.png" height="160" width="510" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="projetos-consultoria_esportiva.html" class="thumbnail">
-                                <img src="/imgs/inicio4.png" height="160" width="510" alt="">
+                                <img src="imgs/inicio4.png" height="160" width="510" alt="">
                             </a>
                         </li>
                     </ul>
@@ -264,7 +264,7 @@ Duvidas:
             <div class="col-md-6 mx-auto caixa">
                 <div class="row align-items-center">
                     <div class="col-auto">
-                        <img src="/imgs/membro3.png" class="perfil">
+                        <img src="imgs/membro3.png" class="perfil">
                     </div>
                     <div class="col info">
                         <h5>Gonçalo Pereira</h4>
@@ -278,7 +278,7 @@ Duvidas:
             <div class="col-md-6 mx-auto caixa">
                 <div class="row align-items-center">
                     <div class="col-auto">
-                        <img src="/imgs/membro3.png" class="perfil">
+                        <img src="imgs/membro3.png" class="perfil">
                     </div>
                     <div class="col info">
                         <h5>Gonçalo Pereira</h4>
@@ -296,34 +296,34 @@ Duvidas:
             <h2 class="titulo-principal">CONHECE A NOSSA EQUIPA</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="/imgs/membro2.png" class="thumb-membro">
+                    <img src="imgs/membro2.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="/imgs/membro3.png" class="thumb-membro">
+                    <img src="imgs/membro3.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="/imgs/membro4.png" class="thumb-membro">
+                    <img src="imgs/membro4.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="/imgs/membro2.png" class="thumb-membro">
+                    <img src="imgs/membro2.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="/imgs/membro3.png" class="thumb-membro">
+                    <img src="imgs/membro3.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="/imgs/membro4.png" class="thumb-membro">
+                    <img src="imgs/membro4.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
                 </div>
@@ -363,7 +363,7 @@ Duvidas:
         </div>
     </footer>
     <footer class="footer-radical">
-        <img src="/imgs/radical_logo_nb.png" class="logo-footer">
+        <img src="imgs/radical_logo_nb.png" class="logo-footer">
         <p>Direitos Reservados 2020 - Radical Events </p>
         <p>Desporto, Aventura e Turismo, Lda.</p>
     </footer>
