--- a/atividades.html
+++ b/atividades.html
@@ -7,42 +7,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"> <!--CDN do bootsrap-->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"> <!--CDN de icons bootsrap-->
+  <script src="js/loadNavbar.js"></script>
 </head>
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-main">
-    <div class="container-fluid">
-      <a class="navbar-brand" href=""><img src="imgs/radical_logo_nb.png" style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#sobre-nos">Sobre Nós</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#atividades">Atividades</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#equipa">Equipa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#reservas">Reservas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contactos">Contactos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#login">Login</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
 <!----Foto Inicial e Titulo-------->
 
@@ -119,6 +86,6 @@ vídeos da actividade.
     <button class="btn btn-success px-3">Marque já</button>
 
   </div>
-  <script src="getAtividade.js"></script>
+  <script src="js/getAtividade.js"></script>
 </body>
 </html>
