--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
-
-<!-- 
-Duvidas: 
-
-- Login com localStorage ou json 
-- Reservas é com json
-- Devemos fazer o codigo em html e depois vue ou começar logo com vue
-
--->
 <html lang="pt">
 
 <head>
@@ -19,45 +10,10 @@ Duvidas:
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <!--CDN de icons bootsrap-->
     <script src="localStorage/localStorage.js"></script>
+    <script src="js/loadNavbar.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-main">
-        <div class="container-fluid">
-            <a class="navbar-brand" href=""><img src="imgs/radical_logo_nb.png"
-                    style="width: 20%; margin-left: 40px;"></a> <!--Melhorar isto-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#sobre-nos">Sobre Nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#atividades">Atividades</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#equipa">Equipa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#reservas">Reservas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contactos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://localhost:8080">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <section class="background-section">
         <div class="container-fluid">
             <div class="row banner">
@@ -367,7 +323,7 @@ Duvidas:
         <p>Direitos Reservados 2020 - Radical Events </p>
         <p>Desporto, Aventura e Turismo, Lda.</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
