--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
     <h1>ENTRA EM CONTACTO CONNOSCO!</h1>
   </div>
   <div class="mapa">
-    <a class="mapa" href=""><img src="imgs/mapa.png" style="width: 45%; margin-left: 5%; margin-top: 90px"></a>
+    <a class="mapa" href="https://www.google.com/maps/place/Universidade+do+Minho+-+Campus+de+Azur%C3%A9m/@41.4506978,-8.2934876,15z/data=!4m6!3m5!1s0xd24eff2732ad231:0x3048fe13f1faee11!8m2!3d41.4506978!4d-8.2934876!16s%2Fg%2F11b6c7zrcm"><img src="imgs/mapa.png" style="width: 45%; margin-left: 5%; margin-top: 90px"></a>
   </div>
 
   <form>
