--- a/contacto.html
+++ b/contacto.html
@@ -62,6 +62,27 @@
     <a class="iconINST" href=""><img src="imgs/icons8-instagram-circle-30.png"></a>
   </div>
 
+  <div class="info">
+    <p>info@radicalevents.com</p>
+  </div>
+  <div class="tel1">
+    <p>+351 253 546 879</p>
+  </div>
+  <div class="tel2">
+    <p>+351 968 933 608</p>
+  </div>
+
+  <div class="icones">
+    <div class="iconinfo">
+      <a class="iconinfo" href=""><img src="imgs/icons8-email-20.png"></a>
+    </div>
+    <div class="icontel1">
+      <a class="icontel1" href=""><img src="imgs/icons8-ringing-phone-20.png"></a>
+    </div>
+    <div class="icontel2">
+      <a class="icontel2" href=""><img src="imgs/icons8-phone-20.png"></a>
+    </div>
+  </div>
 
   <script>
     let listaContactos = localStorage.getItem("listaContactos");
