--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <!--CDN de icons bootsrap-->
-    <script src="localStorage/localStorage.js"></script>
+    <script type="module" src="localStorage/localStorage.js"></script>
     <script src="js/loadNavbar.js"></script>
 </head>
 
