--- a/componentes/navbar.html
+++ b/componentes/navbar.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="contacto.html">Contactos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://univminho.github.io/E601_BO/#/dashboard">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
             </ul>
         </div>
