--- a/reservas.html
+++ b/reservas.html
@@ -3,8 +3,12 @@
 
 <head>
 
+  <meta charset="UTF-8">
   <title> Reservas </title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+  <!--CDN do bootsrap-->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <script src="js/loadNavbar.js"></script>
 
   <style>
