--- a/reservas.html
+++ b/reservas.html
@@ -92,38 +92,8 @@
   </div>
   <div class="container p-5 reservas">
 
-    <h1><b>PEDIDOS DE RESERVAS DE ESPAÇO</b></h1>
-
-    <div class="row">
-      <div class="col-md-2">
-        <span> <b> Instalações* </b> </span>
-      </div>
-      <div class="col-md-10">
-        <button class="btn btn-button dropdown-toggle" type="button" data-toggle="dropdown">
-          -Selecione uma opção-
-        </button>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Opção 1</a>
-          <a class="dropdown-item" href="#">Opção 2</a>
-          <a class="dropdown-item" href="#">Opção 3</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2">
-        <span> <b> Utente* </b> </span>
-      </div>
-      <div class="col-md-10">
-        <button class="btn btn-button dropdown-toggle" type="button" data-toggle="dropdown">
-          -Selecione uma opção-
-        </button>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Opção 1</a>
-          <a class="dropdown-item" href="#">Opção 2</a>
-          <a class="dropdown-item" href="#">Opção 3</a>
-        </div>
-      </div>
-    </div>
+    <div id="formContainer">
+    <form id="form1">
     <h2> <b> DADOS DA RESERVA </b> </h2>
 
     <!--Colocar cada parte como um form para ser mais facil recolher os dados-->
@@ -173,7 +143,12 @@
         <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
       </div>
     </form>
+    <input type="text" name="campo1" />
+    <input type="submit" value="Enviar" />
+  </form>
 
+  <div id="formContainer">
+    <form id="form2">
     <h2><b>RESPONSÁVEL PELA RESERVA</b> </h2>
     <form>
       <div class="form-group">
@@ -194,7 +169,12 @@
       <label> <b> Data de Nascimento </b></label>
       <input type="date" class="form-control" id="dob" />
     </form>
+    <input type="text" name="campo2" />
+    <input type="submit" value="Enviar" />
+  </form>
 
+  <div id="formContainer">
+    <form id="form3">
     <h2><b>DADOS PARA FATURAÇÃO </b></h2>
 
     <form>
@@ -244,6 +224,10 @@
           ULisboa
           a guardar o seu sigilo </b> </p>
     </form>
+    <input type="text" name="campo3" />
+    <input type="submit" value="Enviar" />
+  </form>
+
     <button type="submit" class="btn btn-primary"> <b> Enviar </b></button>
   </div>
 
@@ -251,12 +235,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
-
-
-
-
 
 
 </body>
