--- a/atividades.html
+++ b/atividades.html
@@ -34,7 +34,7 @@
       <img src="" class="imagem-des" id="imagem">
   </div>
 
-  <div class="container-fluid p-5">
+  <div class="pt-5">
     <h6 class="titulodesc">Descrição:</h6> 
     <p class="sobre-desc" id="descricao">
             Este percurso apresenta uma extensão de cerca de 1000 metros percorridos com recurso a 4 rapeis que variam
