--- a/reservas.html
+++ b/reservas.html
@@ -11,6 +11,38 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <script src="js/loadNavbar.js"></script>
 
+  <script>
+
+var form1 = document.getElementById('form1');
+var form2 = document.getElementById('form2');
+var form2 = document.getElementById('form3');
+var formContainer = document.getElementById('formContainer');
+
+form1.addEventListener('submit', function(event) {
+  event.preventDefault();
+
+  // Lógica para tratar o envio do form1
+
+  // Oculta o form1 e exibe o form2
+  form1.style.display = 'none';
+  form2.style.display = 'block';
+});
+
+form2.addEventListener('submit', function(event) {
+  event.preventDefault();
+
+  // Lógica para tratar o envio do form2
+  form2.style.display = 'none';
+  form3.style.display = 'block';
+
+});
+
+form3.addEventListener('submit', function(event) {
+  event.preventDefault();
+
+});
+
+  </script>
   <style>
     body {
       margin-top: 30px;
