--- a/reservas.html
+++ b/reservas.html
@@ -130,7 +130,7 @@ form3.addEventListener('submit', function(event) {
     <h2> <b> DADOS DA RESERVA </b> </h2>
 
     <!--Colocar cada parte como um form para ser mais facil recolher os dados-->
-    <form1>
+    <form id="form1" style="display: none;">
       <div class="form-row">
         <div class="form-group col">
           <label for="inputState">Modalidade</label>
@@ -185,7 +185,7 @@ form3.addEventListener('submit', function(event) {
       </div>
     </form>
     
-  </form1>
+  </form>
 
   <form id="form2" style="display: none;">
     <h2><b>RESPONSÁVEL PELA RESERVA</b> </h2>
@@ -214,7 +214,7 @@ form3.addEventListener('submit', function(event) {
       <input type="date" class="form-control" id="dob" />
     </form>
     
-  </form2>
+  </form>
 
   <form id="form3" style="display: none;">
     <h2><b>DADOS PARA FATURAÇÃO </b></h2>
