--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
                 </div>
             </div>
         </div>
+        <span id="atividades"></span>
     </div>
 
-    <div class="container-fluid p-5" id="atividades">
+    <div class="container-fluid p-5">
         <h2 class="titulo-principal">ATIVIDADES</h2>
         <div class="seperator"></div>
         <!--Categoria 1-->
@@ -246,6 +247,7 @@
                 <img src="imgs/radical__1_-removebg-preview.png" class="img-test">
             </div>
         </div>
+        <span id="equipa"></span>    
     </div>
 
     <div class="container-fluid p-5" id="equipa">
