--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                       <input type="password" class="form-control imp-login" id="password" placeholder="Password">
                     </div>
                     
-                    <button type="submit" class="btn entrar">ENTRAR</button>
+                    <button type="submit" class="btn entrar" id="login">ENTRAR</button>
                   </form>
                   
                   <div class="seperator"></div>
@@ -36,5 +36,5 @@
             </div>
         </div>
     </div>
-
+    <script src="js/login.js"></script>
 </body>
