--- a/registo.html
+++ b/registo.html
@@ -17,6 +17,7 @@
         <div class ="container login" > 
             <div class="caixa-login">
                 <h1>JUNTA-TE A NÓS!</h1>
+                <p class="mb-0">Regista-te e vive momentos unicos</p>
                 <form id="form-login">
                     <div class="mb-3">
                       <input type="text" class="form-control imp-login" id="username" placeholder="Username*">
@@ -34,11 +35,11 @@
                       <input type="password" class="form-control imp-login" id="password" placeholder="Password*">
                     </div>
                     
-                    <button type="submit" class="btn entrar">CRIAR CONTA</button>
+                    <button type="submit" class="btn entrar" id="registo">CRIAR CONTA</button>
                   </form>
-                  
+                  <p class="mb-0"><a href="login.html">Voltar ao login</a></p>
             </div>
         </div>
     </div>
-
+    <script src="/js/registo.js"></script>
 </body>
