--- a/componentes/navbar.html
+++ b/componentes/navbar.html
@@ -26,9 +26,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contactos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
-                </li>
+                <span id="isLogged"></span>
             </ul>
         </div>
     </div>
