--- a/index.html
+++ b/index.html
@@ -221,30 +221,28 @@
             <div class="col-md-6 mx-auto caixa">
                 <div class="row align-items-center">
                     <div class="col-auto">
-                        <img src="imgs/membro3.png" class="perfil">
+                        <img src="imgs/4.jpg" class="rounded-circle perfil">
                     </div>
                     <div class="col info">
-                        <h5>Gonçalo Pereira</h4>
+                        <h5>João Pedro</h4>
                             <p>08/05/2023</p>
                     </div>
                 </div>
-                <p class="testemunho">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum has been the industry's standard dummy text </p>
-                <img src="imgs/radical__1_-removebg-preview.png" class="img-test">
+                <p class="testemunho">Uma experiência inesquecível! O rafting no rio foi simplesmente incrível e mal posso esperar para voltar e experimentar outras atividades radicais oferecidas!</p>
+                <img src="imgs/radical__1_-removebg-preview.png" id="img-test1">
             </div>
             <div class="col-md-6 mx-auto caixa">
                 <div class="row align-items-center">
                     <div class="col-auto">
-                        <img src="imgs/membro3.png" class="perfil">
+                        <img src="imgs/43.jpg" class="rounded-circle perfil">
                     </div>
                     <div class="col info">
-                        <h5>Gonçalo Pereira</h4>
+                        <h5>Pedro Pereira</h4>
                             <p>08/05/2023</p>
                     </div>
                 </div>
-                <p class="testemunho">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum has been the industry's standard dummy text </p>
-                <img src="imgs/radical__1_-removebg-preview.png" class="img-test">
+                <p class="testemunho">Foi a melhor aventura ao ar livre que já vivenciei! O canyoning superou todas as minhas expectativas e recomendo a todos que procuram uma dose de adrenalina! </p>
+                <img src="imgs/radical__2_-removebg-preview.png" id="img-test2">
             </div>
         </div>
         <span id="equipa"></span>    
@@ -254,36 +252,36 @@
             <h2 class="titulo-principal">CONHECE A NOSSA EQUIPA</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="imgs/membro2.png" class="thumb-membro">
+                    <img src="imgs/membro1.png" class="thumb-membro">
                     <p class="nome">Mariana araújo</p>
                     <p class="funcao">COORDENADORA DE EVENTOS</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="imgs/membro2.png" class="thumb-membro">
+                    <p class="nome">Inês Costa</p>
+                    <p class="funcao">INSTRUTORA DE DESPORTOS MARITÍMOS</p>
                 </div>
                 <div class="col-md-4">
                     <img src="imgs/membro3.png" class="thumb-membro">
-                    <p class="nome">Mariana araújo</p>
-                    <p class="funcao">COORDENADORA DE EVENTOS</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="imgs/membro4.png" class="thumb-membro">
-                    <p class="nome">Mariana araújo</p>
-                    <p class="funcao">COORDENADORA DE EVENTOS</p>
+                    <p class="nome">Filipa Pereira</p>
+                    <p class="funcao">INSTRUTORA DE DESPORTOS AÉREOS</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="imgs/membro2.png" class="thumb-membro">
-                    <p class="nome">Mariana araújo</p>
-                    <p class="funcao">COORDENADORA DE EVENTOS</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="imgs/membro3.png" class="thumb-membro">
-                    <p class="nome">Mariana araújo</p>
-                    <p class="funcao">COORDENADORA DE EVENTOS</p>
-                </div>
-                <div class="col-md-4">
                     <img src="imgs/membro4.png" class="thumb-membro">
-                    <p class="nome">Mariana araújo</p>
-                    <p class="funcao">COORDENADORA DE EVENTOS</p>
+                    <p class="nome">Marta Oliveira</p>
+                    <p class="funcao">INSTRUTORA DE DESPORTOS TERRESTRES</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="imgs/membro5.png" class="thumb-membro">
+                    <p class="nome">Gonçalo Pereira</p>
+                    <p class="funcao">FOTÓGRAFO DE EVENTOS</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="imgs/membro6.png" class="thumb-membro">
+                    <p class="nome">Ana Silva</p>
+                    <p class="funcao">ENGENHEIRA DE SEGURANÇA</p>
                 </div>
         </div>
     </div>
