--- a/login.html
+++ b/login.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <!--CDN de icons bootsrap-->
     <script src="js/loadNavbar.js"></script>
+    <style>
+      .alert-top {
+        position: fixed;
+        top: 80px;
+        left: 0;
+        right: 0;
+        transform: translateX(80%);
+      max-width: 600px; /* Define a largura máxima desejada */
+      width: 100%; /* Define a largura para ocupar 100% do espaço disponível */
+    }
+  </style>
+      }
+    </style>
 </head>
 
 <body>
