--- a/reservas.html
+++ b/reservas.html
@@ -10,128 +10,14 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <script src="js/loadNavbar.js"></script>
-
-  <style>
-    body {
-      margin-top: 30px;
-      overflow-x: hidden;
-
-    }
-
-    .reservas h1 {
-      font-family: 'Sansation';
-      color: #3C4A5B;
-      padding-bottom: 30px;
-    }
-
-    .reservas h2 {
-      font-family: 'Sansation';
-      color: #3C4A5B;
-      padding-bottom: 30px;
-      padding-top: 30px;
-    }
-
-    .reservas span {
-      font-family: 'Sansation';
-      color: #3C4A5B;
-
-    }
-
-    .reservas p {
-      font-family: 'Sansation';
-      color: #3C4A5B;
-
-    }
-
-    .reservas label {
-      font-family: 'Sansation';
-      color: #3C4A5B;
-
-    }
-
-    .header {
-      position: relative;
-      color: white;
-    }
-
-    .header video {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .banner {
-      position: relative;
-      text-align: center;
-      font-family: 'Sansation';
-      padding: 150px;
-      color: white;
-      margin-left: 50%;
-    }
-
-    .form-group {
-      padding-bottom: 10px;
-    }
-
-    .form-group label {
-      padding-bottom: 5px;
-    }
-
-    #atividade {
-      background-color: #fff;
-    }
-
-    #continuidade {
-      background-color: #fff;
-    }
-
-    .form-btn {
-      padding: 15px;
-      margin-top: 30px;
-      background-color: rgba(0, 0, 0, 0.975);
-    }
-
-    #form1 .form-btn {
-      padding: 15px;
-      margin-top: 40px;
-      background-color: rgba(0, 0, 0, 0.975);
-    }
-
-    .form-btn:hover {
-      background-color: rgba(0, 0, 0, 0.975);
-    }
-
-    #info-dados {
-      font-size: 14px;
-      margin-bottom: 0px;
-    }
-
-    .dadosConfirm {
-      background-color: #fff;
-      box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-      border-radius: 5px;
-    }
-
-    .dadosConfirm p {
-      padding: 10px;
-      color: rgba(0, 0, 0, 0.975);
-    }
-
-    #caixaConfirmacao {
-      background-color: #EDEEEF;
-      padding: 20px 40px 20px 40px;
-      margin-bottom: 5px;
-    }
-  </style>
-
-
 </head>
 
 <body>
-  <div class="header">
-    <video src="imgs/intro.mp4" width="100%" height="70%" autoplay loop muted class="ratio ratio-16x9"></video>
-    <div class="banner">
+  <div class="header mt-5">
+    <div class="video-reservas">
+      <video src="imgs/intro.mp4" width="100%" height="70%" autoplay loop muted class="ratio ratio-16x9"></video>
+    </div>
+    <div class="banner-reservas">
       <h1>Reserva de Atividades</h1>
       <p>Aventuras à distância de um clique
       <p>
@@ -352,9 +238,6 @@
 
 
   </div>
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
