--- a/componentes/navbar.html
+++ b/componentes/navbar.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Página Inicial</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Página Inicial</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html#sobre-nos">Sobre Nós</a>
