--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="row banner">
                 <div class="col-5">
-                    <h1>O FASCINIO DA NATUREZA, <br> OFERECE MOMENTOS UNICOS</h1>
+                    <h1>O FASCÍNIO DA NATUREZA <br> OFERECE MOMENTOS UNICOS</h1>
                     <p>Uma aventura única e memorável!
                     <p>
                 </div>
@@ -26,84 +26,20 @@
         </div>
     </section>
 
-    <!--<div class="feature-block">
-    <div class="holder">
-        <ul>
-            <li>
-                <a href="https://www.naturimont.com/bicicletas.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Rappel</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/caminhadas.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Slide</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/canoagem.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Canoagem</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/canyoning.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Canyoning</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/moto-agua.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Parapente</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/passeios-barco.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Flyboard</span>
-                </a>
-            </li>        
-            <li>
-                <a href="https://www.naturimont.com/passeios-tt.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Paraquedas</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/stand-up-padle.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Passeios TT</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.naturimont.com/passeios-barco.html">
-                    <span class="ico" style="z-index: 99;">
-                        <i class="bi bi-bicycle"></i>
-                    </span>
-                    <span class="info">Paintball</span>
-                </a>
-            </li>
-        </ul>
+    <div class="feature-block">
+        <div class="holder">
+            <ul id="atividades-inicio">
+                <!--<li>
+                    <a href="https://www.naturimont.com/bicicletas.html">
+                        <span class="ico" style="z-index: 99;">
+                            <i class="bi bi-bicycle"></i>
+                        </span>
+                        <span class="info">Rappel</span>
+                    </a>
+                </li>-->
+            </ul>
+        </div>
     </div>
-  </div> <!-->
 
     <div class="container p-5" id="sobre-nos">
         <div class="inicio p-5">
@@ -132,11 +68,11 @@
                                 <img src="imgs/inicio3.png" height="160" width="510" alt="">
                             </a>
                         </li>
-                        <li>
+                        <!--<li>
                             <a href="projetos-consultoria_esportiva.html" class="thumbnail">
                                 <img src="imgs/inicio4.png" height="160" width="510" alt="">
                             </a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
                 <div class="col-md-6 text-block">
@@ -163,35 +99,36 @@
         <h2 class="titulo-principal">ATIVIDADES</h2>
         <div class="seperator"></div>
         <!--Categoria 1-->
-        <div class="categoria">
-            <h1>DESPORTOS MARITIMOS</h1>
-        </div>
         <div class="container">
+            <div class="categoria">
+                <h1>DESPORTOS MARITIMOS</h1>
+            </div>
             <div class="row atividade" id="maritimos">
                 <!--<div class="col-md-4">
-                        <figure>
-                            <a href="atividades.html"><img src="/imgs/inicio1.png" class="img-fluid"></a>
-                            <figcaption class="bg-dark text-light">Desde 17€ pax</figcaption>
-                            <p>CANOAGEM</p>
-                        </figure>
-                    </div>-->
-
+                    <figure class="figure-overlay">
+                        <a href="atividades.html"><img src="/imgs/canyoning.jpg" class="img-fluid img-hover"></a>
+                        <figcaption class="bg-dark text-light">Desde 17€ pax</figcaption>
+                        <figcaption class="overlay"><a href="login.html"><span class="icon"><i
+                                    class="bi bi-plus-circle-fill fs-2"></i></span></a>Ver Detalhes</figcaption>
+                        <p>CANOAGEM</p>
+                    </figure>
+                </div>-->
             </div>
         </div>
         <!--Categoria 2-->
-        <div class="categoria">
-            <h1>DESPORTOS TERRESTRES</h1>
-        </div>
         <div class="container">
+            <div class="categoria">
+                <h1>DESPORTOS TERRESTRES</h1>
+            </div>
             <div class="row atividade" id="terrestres">
 
             </div>
         </div>
         <!--Categoria 3-->
-        <div class="categoria">
-            <h1>DESPORTOS AEREOS</h1>
-        </div>
         <div class="container">
+            <div class="categoria">
+                <h1>DESPORTOS AEREOS</h1>
+            </div>
             <div class="row atividade" id="aereos">
 
             </div>
@@ -200,100 +137,102 @@
 
     <div class="container-fluid p-5" id="indicadores">
         <h1 class="titulo">RADICAL EVENTS, UM LUGAR <br> ONDE A AVENTURA NÃO TEM FIM!</h2>
-        <p class="subtitulo">Mais de 20 anos de experiência.</h2>
-        <div class="row dados">
-            <div class="col-md-4">
-                <h1>200+</h1>
-                <p>Clientes Satisfeitos</p>
-            </div>
-            <div class="col-md-4">
-                <h1>50+</h1>
-                <p>Atividades no último ano</p>
-            </div>
-            <div class="col-md-4">
-                <h1>5+</h1>
-                <p>Regiões</p>
-            </div>
-        </div>
-        <div class="row opiniao">
-            <h1>OPINIÃO</h1>
-            <h4>O que falam sobre nós...</h4>
-            <div class="col-md-6 mx-auto caixa">
-                <div class="row align-items-center">
-                    <div class="col-auto">
-                        <img src="imgs/4.jpg" class="rounded-circle perfil">
-                    </div>
-                    <div class="col info">
-                        <h5>João Pedro</h4>
-                            <p>08/05/2023</p>
-                    </div>
+            <p class="subtitulo">Mais de 20 anos de experiência.</h2>
+            <div class="row dados">
+                <div class="col-md-4">
+                    <h1>200+</h1>
+                    <p>Clientes Satisfeitos</p>
                 </div>
-                <p class="testemunho">Uma experiência inesquecível! O rafting no rio foi simplesmente incrível e mal posso esperar para voltar e experimentar outras atividades radicais oferecidas!</p>
-                <img src="imgs/radical__1_-removebg-preview.png" id="img-test1">
-            </div>
-            <div class="col-md-6 mx-auto caixa">
-                <div class="row align-items-center">
-                    <div class="col-auto">
-                        <img src="imgs/43.jpg" class="rounded-circle perfil">
-                    </div>
-                    <div class="col info">
-                        <h5>Pedro Pereira</h4>
-                            <p>08/05/2023</p>
-                    </div>
+                <div class="col-md-4">
+                    <h1>50+</h1>
+                    <p>Atividades no último ano</p>
                 </div>
-                <p class="testemunho">Foi a melhor aventura ao ar livre que já vivenciei! O canyoning superou todas as minhas expectativas e recomendo a todos que procuram uma dose de adrenalina! </p>
-                <img src="imgs/radical__2_-removebg-preview.png" id="img-test2">
+                <div class="col-md-4">
+                    <h1>5+</h1>
+                    <p>Regiões</p>
+                </div>
             </div>
-        </div>
-        <span id="equipa"></span>    
+            <div class="row opiniao">
+                <h1>OPINIÃO</h1>
+                <h4>O que falam sobre nós...</h4>
+                <div class="col-md-6 mx-auto caixa">
+                    <div class="row align-items-center">
+                        <div class="col-auto">
+                            <img src="imgs/4.jpg" class="rounded-circle perfil">
+                        </div>
+                        <div class="col info">
+                            <h5>João Pedro</h4>
+                                <p>08/05/2023</p>
+                        </div>
+                    </div>
+                    <p class="testemunho">Uma experiência inesquecível! A canoagem no rio foi simplesmente incrível e mal
+                        posso esperar para voltar e experimentar outras atividades radicais oferecidas!</p>
+                    <img src="imgs/radical__1_-removebg-preview.png" id="img-test1">
+                </div>
+                <div class="col-md-6 mx-auto caixa">
+                    <div class="row align-items-center">
+                        <div class="col-auto">
+                            <img src="imgs/43.jpg" class="rounded-circle perfil">
+                        </div>
+                        <div class="col info">
+                            <h5>Pedro Pereira</h4>
+                                <p>08/05/2023</p>
+                        </div>
+                    </div>
+                    <p class="testemunho">Foi a melhor aventura ao ar livre que já vivenciei! O canyoning superou todas
+                        as minhas expectativas e recomendo a todos que procuram uma dose de adrenalina! </p>
+                    <img src="imgs/radical__2_-removebg-preview.png" id="img-test2">
+                </div>
+            </div>
+            <span id="equipa"></span>
     </div>
 
     <div class="container-fluid p-5" id="equipa">
-            <h2 class="titulo-principal">CONHECE A NOSSA EQUIPA</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="imgs/membro1.png" class="thumb-membro">
-                    <p class="nome">Mariana araújo</p>
-                    <p class="funcao">COORDENADORA DE EVENTOS</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="imgs/membro2.png" class="thumb-membro">
-                    <p class="nome">Inês Costa</p>
-                    <p class="funcao">INSTRUTORA DE DESPORTOS MARITÍMOS</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="imgs/membro3.png" class="thumb-membro">
-                    <p class="nome">Filipa Pereira</p>
-                    <p class="funcao">INSTRUTORA DE DESPORTOS AÉREOS</p>
-                </div>
+        <h2 class="titulo-principal">CONHECE A NOSSA EQUIPA</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="imgs/membro1.png" class="thumb-membro">
+                <p class="nome">Mariana araújo</p>
+                <p class="funcao">COORDENADORA DE EVENTOS</p>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="imgs/membro4.png" class="thumb-membro">
-                    <p class="nome">Marta Oliveira</p>
-                    <p class="funcao">INSTRUTORA DE DESPORTOS TERRESTRES</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="imgs/membro5.png" class="thumb-membro">
-                    <p class="nome">Gonçalo Pereira</p>
-                    <p class="funcao">FOTÓGRAFO DE EVENTOS</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="imgs/membro6.png" class="thumb-membro">
-                    <p class="nome">Ana Silva</p>
-                    <p class="funcao">ENGENHEIRA DE SEGURANÇA</p>
-                </div>
+            <div class="col-md-4">
+                <img src="imgs/membro2.png" class="thumb-membro">
+                <p class="nome">Inês Costa</p>
+                <p class="funcao">INSTRUTORA DE DESPORTOS MARITÍMOS</p>
+            </div>
+            <div class="col-md-4">
+                <img src="imgs/membro3.png" class="thumb-membro">
+                <p class="nome">Filipa Pereira</p>
+                <p class="funcao">INSTRUTORA DE DESPORTOS AÉREOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="imgs/membro4.png" class="thumb-membro">
+                <p class="nome">Marta Oliveira</p>
+                <p class="funcao">INSTRUTORA DE DESPORTOS TERRESTRES</p>
+            </div>
+            <div class="col-md-4">
+                <img src="imgs/membro5.png" class="thumb-membro">
+                <p class="nome">Gonçalo Pereira</p>
+                <p class="funcao">FOTÓGRAFO DE EVENTOS</p>
+            </div>
+            <div class="col-md-4">
+                <img src="imgs/membro6.png" class="thumb-membro">
+                <p class="nome">Ana Silva</p>
+                <p class="funcao">ENGENHEIRA DE SEGURANÇA</p>
+            </div>
         </div>
     </div>
     <footer class="footer-info">
         <div class="container-fluid p-5">
             <div class="row links">
-                <div class="col-md-2">Linkdin</div>
-                <div class="col-md-2">Facebook</div>
-                <div class="col-md-2">Instagram</div>
-                <div class="col-md-2">Google Maps</div>
-                <div class="col-md-2">YouTube</div>
-                <div class="col-md-2">Twitter</div>
+                <div class="col-md-2"><a href="https://www.linkedin.com/feed/">Linkdin</a></div>
+                <div class="col-md-2"><a href="https://www.facebook.com">Facebook</a></div>
+                <div class="col-md-2"><a href="https://www.instagram.com">Instagram</a></div>
+                <div class="col-md-2"><a href="https://www.google.com/maps">Google Maps</a></div>
+                <div class="col-md-2"><a href="https://www.youtube.com">YouTube</a></div>
+                <div class="col-md-2"><a href="https://twitter.com/home?lang=pt">Twitter</a></div>
             </div>
             <div class="noticias">
                 <div class="seperator"></div>
@@ -302,19 +241,19 @@
             <div class="row contactos">
                 <div class="col-md-4">
                     <h4>Morada</h4>
-                    <p>SEDE: Rua do Ribeiro, nº 182, Casa 2,</p>
-                    <p>5100-361 Britiande - Lamego</p>
+                    <p>Campus de Azurém, Av. da Universidade</p> 4800-058 Guimarães
+                    <p>4800-058 Guimarães</p>
                 </div>
                 <div class="col-md-4">
                     <h4>Contactos</h4>
-                    <p>SEDE: Rua do Ribeiro, nº 182, Casa 2,</p>
-                    <p>5100-361 Britiande - Lamego</p>
+                    <p>+351 968 933 608</p>
+                    <p>+351 254 613 918</p>
                 </div>
                 <div class="col-md-4">
                     <h4>Informações</h4>
-                    <p>SEDE: Rua do Ribeiro, nº 182, Casa 2,</p>
-                    <p>5100-361 Britiande - Lamego</p>
-                </div>             
+                    <p>Políticas de Privacidade</p>
+                    <p>Políticas de Utilização</p>
+                </div>
             </div>
         </div>
     </footer>
